@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.13.00 on Sun, 11 Oct 2015 12:23:04 +0200
+// Generated by Bisonc++ V4.13.00 on Wed, 14 Oct 2015 13:59:55 +0200
 
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
@@ -140,40 +140,11 @@ namespace Meta__
             typename TypeOf<tg_>::type const &get() const;
     };
 
-        // NoDefault and HasDefault are used to handle the initialization of
-        // Semantic below. With NoDefault as base class Semantic's default
-        // constructor won't compile. NoDefault is selected if the Base class
-        // from which Semantic derives has no default constructor.
-    struct HasDefault
-    {
-        HasDefault() = default;
-        HasDefault(int)
-        {}
-    };
-   
-    struct NoDefault
-    {
-        NoDefault() = delete;   // beautifies the error message
-        NoDefault(int)
-        {}
-    };
-        
         // The class Semantic is derived from Base. It stores a particular
         // semantic value type. 
     template <Tag__ tg_>
-    class Semantic: public Base,
-                    private std::conditional<
-                                std::is_default_constructible<
-                                    typename TypeOf<tg_>::type>::value,
-                                    HasDefault, NoDefault
-                            >::type
+    class Semantic: public Base
     {
-        typedef typename std::conditional<
-                            std::is_default_constructible<
-                                typename TypeOf<tg_>::type>::value,
-                                HasDefault, NoDefault
-                            >::type Base2;
-
         typedef typename TypeOf<tg_>::type DataType;
     
         DataType d_data;
@@ -409,7 +380,6 @@ template <typename ...Params>
 inline Semantic<tg_>::Semantic(Params &&...params)
 :
     Base(tg_),
-    Base2(0),
     d_data(std::forward<Params>(params) ...)
 {}
 
