@@ -16,7 +16,6 @@ template <typename ...Params>
 inline Semantic<tg_>::Semantic(Params &&...params)
 :
     Base(tg_),
-    Base2(0),
     d_data(std::forward<Params>(params) ...)
 {}
 
